Fix horizontal overflow background.

--- a/NotD-Aftermath-Web/src/app/app.component.scss
+++ b/NotD-Aftermath-Web/src/app/app.component.scss
@@ -1,5 +1,6 @@
 .app-frame {
     min-height: 100%;
+    overflow: auto;
 }
 
 .content {
